--- a/bilibili-lite/src/account/base.styl
+++ b/bilibili-lite/src/account/base.styl
@@ -25,6 +25,7 @@
 .big-more-item-item:hover .big-more-item-txt
 .points-pendant-item:hover
 .pendant-list li:hover
+.identmagBot
   background-color var(--c-hover) !important
 
 .home-top-level-upgo
@@ -107,6 +108,8 @@
 .record-exp-table-wrapper
 .invitation-top-warp
 .invtable
+.identmag
+.identmagTop
   border-color var(--c-border) !important
 
 .active .tabs-normal-txt
