--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -84,6 +84,7 @@
 .attention-btn-ctnr .right-part
 .rank-list-ctnr
 .tabs .tab-list .item
+.edit-button
 	border-color var(--c-border) !important
 
 .recharge-store-box ul.select-list .item.active
@@ -126,12 +127,6 @@
 
 	&::after
 		content none !important
-
-.link-navbar .main-ctnr .nav-logo:before
-	top 11px !important
-	width 30px !important
-	height 30px !important
-	background-size 30px !important
 
 .live-room-app .app-content .app-body .player-and-aside-area .aside-area .chat-control-panel
 	border-top 1px solid var(--c-border)
