--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -60,6 +60,7 @@ button
 .link-panigation .panigation.selected
 .submit-btn
 .btn-go-write
+.pagination-container .pagination.active
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -147,6 +148,7 @@ button
 .author-info .favourite-btn-ctnr .communicate-btn
 .link-panigation .panigation
 .submit-btn.disabled
+.pagination-container .pagination
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
