--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -10,5 +10,7 @@ url-prefix("https://www.bilibili.com/blackboard/") {
 	@import 'header'
 	@import 'base'
 	@import 'list'
+}
+@-moz-document url-prefix("https://www.bilibili.com/blackboard/") {
 	@import 'blackboard'
 }
