--- a/bilibili-lite/src/account/site.styl
+++ b/bilibili-lite/src/account/site.styl
@@ -77,6 +77,7 @@
   transition background-color 0.3s ease-in-out !important
 
 .bg-blue
+  border-radius 4px
   background-color var(--c-hover) !important
   color var(--c-title) !important
 
