--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -15,6 +15,7 @@
 .calendar-checkin .title
 .calendar-checkin .calendar-wrapper
 .calendar-checkin .checkin-rewards
+.shortcuts-ctnr .shortcut-item
   background-color transparent !important
 
 .divider
@@ -47,3 +48,9 @@
 .search-bar-ctnr .search-bar
   border 0 !important
   background-color var(--c-hover) !important
+
+.link-navbar .main-ctnr .nav-logo:before
+  top 11px !important
+  width 30px !important
+  height 30px !important
+  background-size 30px !important
