--- a/bilibili-lite/src/live/index.styl
+++ b/bilibili-lite/src/live/index.styl
@@ -1,8 +1,14 @@
-@-moz-document url-prefix("https://live.bilibili.com/") {
+@-moz-document url-prefix("https://live.bilibili.com/"),
+url-prefix("https://link.bilibili.com/") {
 	/* 直播样式 */
 	@import 'header'
 	@import 'home'
 	@import 'list'
 	@import 'room'
+}
+@-moz-document url-prefix("https://live.bilibili.com/activity/") {
 	@import 'active'
+}
+@-moz-document url-prefix("https://link.bilibili.com/") {
+	@import 'link'
 }
