--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -33,6 +33,14 @@ em:not(.icon)
 .attention-btn-ctnr .left-part
 .gift-item .corner-mark
 .container .name-info .live
+.count-num
+.user-info>.uid
+.user-info>.tag-flag
+.page-title .count
+.history-card .up-info .room-status>span.on-live
+.achievement-card-centent>.header>.state-normal.-success
+#app-news #list .item .title-wrap .activity
+.tab-selector-wrap .tag-wrap .tag span.selected
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -53,6 +61,9 @@ em:not(.icon)
 .live-status-label
 .up-level-icon
 .user-level-icon
+.history-card .up-info .room-status>span
+.achievement-card-centent>.header>.state-normal
+.tab-selector-wrap .tag-wrap .tag span
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -80,6 +91,7 @@ em:not(.icon)
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
 .link-tag:hover
+.tab-selector-wrap .tag-wrap .tag span:hover
   border-color var(--c-accent) !important
 
 /* input */
