--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -52,18 +52,28 @@ hr
 	border-color var(--c-border) !important
 	background-color var(--c-border) !important
 
-table tr
-	border-color var(--c-border) !important
+/* 表格 */
+table
 	background-color transparent !important
 
-table tbody tr:nth-child(odd) td
-	background-color var(--c-hover) !important
+	thead
+	tbody
+	thead tr
+		border-color var(--c-border) !important
+		background-color transparent !important
 
-table tr th
-table tr td
-	border-color var(--c-border) !important
-	background-color var(--c-background) !important
-	color var(--c-text) !important
+	tbody tr
+		border-color var(--c-border) !important
+		background-color transparent !important
+
+		&:nth-child(odd) td
+			background-color var(--c-hover) !important
+
+		th
+		td
+			border-color var(--c-border) !important
+			background-color var(--c-background) !important
+			color var(--c-text) !important
 
 /* 选择框 */
 .selector
@@ -83,6 +93,51 @@ table tr td
 
 			&:hover
 				background-color var(--c-hover) !important
+
+.area-selector
+	border-color var(--c-border) !important
+	background-color var(--c-background) !important
+
+.area-panel
+	border-color var(--c-border) !important
+	background-color var(--c-background) !important
+
+/* switch 开关 */
+.bl-switch
+	border 1px solid var(--c-border)
+	background-color var(--c-background) !important
+	transition all 0.3s ease-in-out
+
+	&::after
+		background-color var(--c-white) !important
+
+	&.bl-switch-checked
+		border-color var(--c-accent) !important
+		background-color var(--c-accent) !important
+
+/* 日历选择器 */
+.pika-single
+	border 1px solid var(--c-border) !important
+	background-color var(--c-background) !important
+
+	.pika-label
+		background-color var(--c-hover) !important
+
+	.pika-table
+		thead
+		tbody
+			border-color var(--c-background) !important
+
+	button
+		background-color transparent !important
+		color var(--c-title) !important
+
+		&::after
+			content none !important
+
+	.is-selected button
+		background-color var(--c-accent) !important
+		color var(--c-white) !important
 
 ::-webkit-input-placeholder
 	color #d2d2d2
