--- a/bilibili-lite/src/live/active.styl
+++ b/bilibili-lite/src/live/active.styl
@@ -1,6 +1,6 @@
 /* 活动直播 */
 .bili-footer
-  display: none !important
+  display none !important
 
 .box-body
 #webShare .bili-share-pc
@@ -9,7 +9,10 @@
 
 .popup-bg-cntr .popup-cntr .left-part
 .bingo-list
-  background-color: var(--c-hover) !important
+  background-color var(--c-hover) !important
+
+body
+  background-color transparent !important
 
 .bili-share-pc .title
 .popup-bg-cntr .popup-cntr .right-part .activity-name
@@ -22,14 +25,21 @@
 
 .popup-bg-cntr .popup-cntr .left-part .round-item.active
   background-color var(--c-background) !important
-  background-image: none !important
+  background-image none !important
 
 .countdown-bar-cntr
-  box-shadow: none !important
-  background-color: transparent !important
+  box-shadow none !important
+  background-color transparent !important
 
 .box-body
-  margin-bottom: 30px
+  margin-bottom 30px
+
+.page-bg-wrap
+  margin-top 0 !important
+
+.link-navbar
+  position absolute
+  width 100%
 
 button
   background-color transparent !important
