--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -52,6 +52,7 @@
 
 .bilibili-live-player button
 .live-player-ctnr button
+.awarding-panel button
 .search-bar-ctnr .search-bar .search-btn
 .link-panel-ctnr .load-more .load-more-btn
 .attention-live .switch-btn
