--- a/bilibili-lite/src/live/link.styl
+++ b/bilibili-lite/src/live/link.styl
@@ -52,7 +52,7 @@ div.mce-edit-area
   color var(--c-title) !important
 
 .no-data-msg
-  color: var(--c-text) !important
+  color var(--c-text) !important
 
 .tabnav-tip
   color var(--c-white) !important
