--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -167,8 +167,8 @@ input[type=text]:focus
 .section .more
   background-image none
 
-.content
-  width 100% !important
+#page-index .video.full-rows .content
+  max-height none
 
 #page-index .video .content
 #page-index .coin .content
