--- a/bilibili-lite/src/live/index.styl
+++ b/bilibili-lite/src/live/index.styl
@@ -6,7 +6,9 @@ url-prefix("https://link.bilibili.com/") {
 	@import 'list'
 	@import 'room'
 }
-@-moz-document url-prefix("https://live.bilibili.com/activity/") {
+@-moz-document url-prefix("https://live.bilibili.com/"),
+url-prefix("https://live.bilibili.com/activity/"),
+url-prefix("https://live.bilibili.com/p/") {
 	@import 'active'
 }
 @-moz-document url-prefix("https://link.bilibili.com/") {
