--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -1,9 +1,10 @@
 /* 评论 */
 .bb-comment .nameplate .nameplate-card .nameplate-arrow
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-arrow
-	display: none
+	display none
 
 #comment
+.comment
 .page-comment
 .bb-comment
 .comment-bg
@@ -12,7 +13,7 @@
 .emoji-box .emoji-tabs
 .bb-comment .comment-list .list-item .reply-box .view-more .btn-more:hover
 .comment-bilibili-fold .comment-list .list-item .reply-box .view-more .btn-more:hover
-	background-color var(--c-background)
+	background-color var(--c-background) !important
 
 .paging-box .current
 .bb-comment .nameplate .nameplate-card .nameplate-text .n-name
@@ -32,7 +33,7 @@
 
 .bb-comment .stick.true-love .medal-level
 .comment-bilibili-fold .stick.true-love .medal-level
-	color: var(--c-white) !important
+	color var(--c-white) !important
 
 .bb-comment .comment-header
 .comment-bilibili-fold .comment-header
@@ -55,7 +56,7 @@
 
 .bb-comment .nameplate .nameplate-card .nameplate-text
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text
-	border: 0
+	border 0
 
 .bb-comment .comment-header .tabs-order li.on
 .comment-bilibili-fold .comment-header .tabs-order li.on
