--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -2,6 +2,7 @@
 button
 .btn
 .default-btn
+.bili-btn
 .go-top
 .to-top
 .backup
@@ -61,6 +62,8 @@ button
 .submit-btn
 .btn-go-write
 .pagination-container .pagination.active
+#nav_upload_btn
+.back-top-box .totop-container.utils-box
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -94,6 +97,7 @@ button
 
 .default
 .more-btn
+.forward
 .prev
 .next
 .btn-pre
@@ -149,6 +153,7 @@ button
 .link-panigation .panigation
 .submit-btn.disabled
 .pagination-container .pagination
+.source-rank-stretch-button
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
