--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -3,6 +3,7 @@
   /*![[defaultTheme]]*/
   @import 'base'
   @import 'none'
+  @import 'form'
   @import 'button'
   @import 'background'
   @import 'header'
