--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -41,6 +41,12 @@ em:not(.icon)
 .achievement-card-centent>.header>.state-normal.-success
 #app-news #list .item .title-wrap .activity
 .tab-selector-wrap .tag-wrap .tag span.selected
+.nav-upload-container .nav-upload-item .red_point
+.tips-item_wrap .tips-item_left .label
+.calendarEntry_box .calendarEntry_content .luck_wrap .luck_title
+.carousel-module .panel .title .tag-label.doing
+.comment-list-item .ci-title .relation-label
+.announce li>div span
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -125,6 +131,14 @@ textarea
 .bili-header-m .nav-menu .nav-con .nav-item .i-frame
 .popup-bind-tip
 .set-copyright .copyright-select-box
+.el-popover
+.new-calendar-wrap
+.dropdown__content
+.select-box
+.bui-tooltip .bui-tooltip-bubble .bui-tooltip-content .bui-tooltip-inner
+.bui-tooltip .bui-tooltip-bubble .bui-tooltip-content:before
+.bui-tooltip .bui-tooltip-arrow:before
+.option-menu
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -137,6 +151,10 @@ textarea
 .be-dropdown-item:hover
 .player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap .player-auxiliary-setting-menu-list:hover
 .select-wrap .select-option p:hover
+.dropdown__content .dropdown__active
+.dropdown__content .dropdown__item:hover
+.dropdown .dropdown-menu .selected
+.option-menu .menu-item:hover
   background-color var(--c-hover) !important
 
 .van-popper .popper__arrow
