--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -75,70 +75,7 @@ table
 			background-color var(--c-background) !important
 			color var(--c-text) !important
 
-/* 选择框 */
-.selector
-	border-color var(--c-border) !important
-	background-color var(--c-background) !important
-
-	.current
-	.triangle .icon-font
-		color var(--c-title) !important
-
-	.data-list
-		border-color var(--c-border) !important
-		background-color var(--c-background) !important
-
-		li
-			transition background-color 0.3s ease-in-out !important
-
-			&:hover
-				background-color var(--c-hover) !important
-
-.area-selector
-	border-color var(--c-border) !important
-	background-color var(--c-background) !important
-
-.area-panel
-	border-color var(--c-border) !important
-	background-color var(--c-background) !important
-
-/* switch 开关 */
-.bl-switch
-	border 1px solid var(--c-border)
-	background-color var(--c-background) !important
-	transition all 0.3s ease-in-out
-
-	&::after
-		background-color var(--c-white) !important
-
-	&.bl-switch-checked
-		border-color var(--c-accent) !important
-		background-color var(--c-accent) !important
-
-/* 日历选择器 */
-.pika-single
-	border 1px solid var(--c-border) !important
-	background-color var(--c-background) !important
-
-	.pika-label
-		background-color var(--c-hover) !important
-
-	.pika-table
-		thead
-		tbody
-			border-color var(--c-background) !important
-
-	button
-		background-color transparent !important
-		color var(--c-title) !important
-
-		&::after
-			content none !important
-
-	.is-selected button
-		background-color var(--c-accent) !important
-		color var(--c-white) !important
-
+/* 输入框提示文本 */
 ::-webkit-input-placeholder
 	color #d2d2d2
 
