feat: 增加音乐与动态

--- a/bilibili-lite/src/live/link.styl
+++ b/bilibili-lite/src/live/link.styl
@@ -76,6 +76,8 @@ div.mce-edit-area
 .mce-tinymce .mce-btn button
 .mce-window-head
 .live-haruna .tab-body .item
+.latest
+.areas .area
   border-color var(--c-border) !important
 
 .mce-caret
