--- a/bilibili-lite/src/member/header.styl
+++ b/bilibili-lite/src/member/header.styl
@@ -33,5 +33,6 @@
 /* 二级导航 */
 .link-top-container
 .version-switch-section
-  border-bottom-color var(--c-border)
+.practice-wrap .tab-container
+  border-bottom-color var(--c-border) !important
   background-color var(--c-background) !important
