--- a/bilibili-lite/src/member/sidebar.styl
+++ b/bilibili-lite/src/member/sidebar.styl
@@ -1,5 +1,6 @@
 /* 侧边栏导航 */
 .slider-bar .nav-cut-off-line
+.border-line
   display none !important
 
 .cc-nav-wrp
@@ -19,7 +20,14 @@
 .slider-bar .menu-title
 .slider-bar .menu-title span
 .slider-bar .bar-item i
+.left-nav-item i
+.advice-btn
+.advice-title
+.advice-item-title
   color var(--c-title) !important
+
+.advice-info
+  color var(--c-text) !important
 
 .back-top-box .item-desc i
   color var(--c-white) !important
@@ -34,6 +42,8 @@
 .slider-bar .bar-item .bcc-nav-slider-sub-menu .router-item.active i
 .slider-bar .bar-item .bcc-nav-slider-sub-menu .router_wrap.active
 .slider-bar .bar-item .bcc-nav-slider-sub-menu .router_wrap.active i
+.left-nav-list.active .left-nav-item i
+.left-nav-list.active .left-nav-item span
   color var(--c-accent) !important
 
 .cc-nav-wrp
