--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -52,6 +52,7 @@
 .comment-area .comm-more
 .bb-comment .stick.true-love .medal-level
 .comment-bilibili-fold .stick.true-love .medal-level
+.list-comment
 	border-color var(--c-border) !important
 
 .bb-comment .nameplate .nameplate-card .nameplate-text
