--- a/bilibili-lite/src/index.styl
+++ b/bilibili-lite/src/index.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.0.2
+@version        1.0.3
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -45,3 +45,5 @@
 @import 'blackroom'
 @import 'h'
 @import 'member'
+@import 'audio'
+@import 't'
