--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -1,8 +1,9 @@
 /* 主体 */
 .side-utils .feedback-container
 .bili-tab.current:after
-.dc-radio-button.is-active:after
+.dc-radio-button.is-active::after
 .cc-zimu-wrp .zimu-header em
+.footer-content .social-menu
   display none !important
 
 .cc-body
@@ -26,6 +27,11 @@
 .rule
 .create-protect-wrp
 .protect-apply-entry-wrp .protect-entry .error-tips
+.upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after
+#edit-page
+.edit-article-wrap #edit-article-box
+#text-contribute .fixed-header
+.editor-box .editor-toolbar
   background-color var(--c-background) !important
 
 .message-notice_wrap .tips-item_wrap
@@ -40,6 +46,13 @@
 .comment-list-item .ci-parent-reply
 #charge-wrapper .main-charge .elec-con
 #charge-wrapper .main-charge .shell-con
+.upload-v2-step1-container #homeDrop
+.video-editor-ol-wrp
+.editor-box
+.editor-box .editor-toolbar li.preview
+.cover-upload-box
+.ui-input-textarea
+.qa-area-ol-wrp
   background-color var(--c-hover) !important
 
 .dc-progress-bar
@@ -56,12 +69,17 @@
 .setting .follow-setting .follow-wrp .follow-modal
 .setting .public-setting .follow-wrp .follow-modal
 .setting .watermark-setting .watermark-wrp .watermark-modal
+.ui-input-textarea textarea
+.float-toolbar .toolbar-list
+.float-toolbar .back-top
+.edui-default .edui-editor
   background-color transparent !important
 
 .tabs .tabs__header .tabs__header-item.is-active:after
 .dc-progress-bar_inner
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar:before
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .active-bar
+.rookie_content .rookie_division li .div_name span .hot_tip
   background-color var(--c-accent) !important
 
 .calendarEntry_box .calendarEntry_content .today
@@ -98,6 +116,9 @@
 .lab-item .lab-item-content .content-detail .feedback
   color var(--c-text) !important
 
+.link-top-container .link-top-item.active .red_point
+  color var(--c-white) !important
+
 .calendarEntry_box .greetings .greet-num
 .new-calendar-wrap .calendar-body .date-wrap .wrap-content .today
 .data-card .tab .data-tab.current
@@ -117,6 +138,9 @@
 #charge-wrapper .main-charge .shell-con .num
 #charge-wrapper .main-charge .elec-con .progress .pro-date.red
 .setting .section-edit:hover span
+.video-editor-ol-wrp .icon-xic_video_huaban
+.editor-box .editor-toolbar .child-list li:hover
+i.icon-shape:after
   color var(--c-accent) !important
 
 .bili-share-pc
@@ -151,21 +175,38 @@
 .protect-apply-entry-wrp .protect-entry .error-tips
 .lab-item
 .setting .clearfix
+.original-editor-wrap
+.editor-box .editor-toolbar li.cut-off
+.color-board .color-group
+.editor-box .editor-toolbar .child-list li[class*=cut-off]
+.cards-block .cards-list .card-item .card-case
+.ui-input-textarea
+.modal-wrap .header
+.read-list-component .creat-read-list-box .add-btn
+.footer-content
   border-color var(--c-border) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
   border-bottom-color var(--c-background) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow
+.upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after
   border-bottom-color var(--c-border) !important
 
 .section-item .diff-wrp .diff-text:before
   border-bottom-color var(--c-accent) !important
 
+.upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after
+  border-right-color var(--c-border) !important
+
 .recent-danmu-wrp .danmu-filter .left .option-menu
+.editor-box
+.editor-box .editor-toolbar .child-list
+.classify .sub-list
   border 1px solid var(--c-border) !important
 
 .toolbox
+.editor-box #editor-box
   border-top 1px solid var(--c-border) !important
 
 .danmu-container
@@ -179,6 +220,8 @@
   border 0 !important
 
 .danmu-container
+.editor-box .editor-toolbar .child-list
+.cc-btn
   box-shadow none !important
 
 .ui-dropdown .default
@@ -186,6 +229,14 @@
 
 .pager .jump-pager
   vertical-align -webkit-baseline-middle
+
+.editor-box .editor-toolbar
+.editor-box #editor-box .edui-editor
+.edui-default .edui-editor-iframeholder
+  width 100% !important
+
+.contet-wrap
+  width 940px
 
 .ui-serch .run-serch
   background-color transparent !important
