--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -47,6 +47,10 @@ em:not(.icon)
 .carousel-module .panel .title .tag-label.doing
 .comment-list-item .ci-title .relation-label
 .announce li>div span
+.video-jam-state
+.red_point
+.video-editor-ol-wrp .video-editor-ol-new
+.qa-area-ol-new
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -70,6 +74,7 @@ em:not(.icon)
 .history-card .up-info .room-status>span
 .achievement-card-centent>.header>.state-normal
 .tab-selector-wrap .tag-wrap .tag span
+.category
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -78,6 +83,7 @@ em:not(.icon)
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
 .link-tag:hover
+.category:hover
   background-color var(--c-hover) !important
 
 .primary-menu .nav-menu .channel.on:after
@@ -98,6 +104,7 @@ em:not(.icon)
 .tag-area .tag:hover
 .link-tag:hover
 .tab-selector-wrap .tag-wrap .tag span:hover
+.category:hover
   border-color var(--c-accent) !important
 
 /* input */
@@ -139,6 +146,19 @@ textarea
 .bui-tooltip .bui-tooltip-bubble .bui-tooltip-content:before
 .bui-tooltip .bui-tooltip-arrow:before
 .option-menu
+.upload-v2-step1-container #homeDrop .video-jam .video-jam-comment
+.upload-v2-container .upload-agreement .reg-1 .reg-2-tip
+.editor-box .editor-toolbar .child-list
+.classify .sub-list
+.modal-wrap
+.load-marks
+.contri-condition .contri-sort .contri-sort-type
+.advice-dialog-wrapper
+.tag-modal
+.share-board .share-btn
+.static-popup
+.hash-popup.bg-white
+.create-vote
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -155,6 +175,10 @@ textarea
 .dropdown__content .dropdown__item:hover
 .dropdown .dropdown-menu .selected
 .option-menu .menu-item:hover
+.classify .sub-list .sub-item.active, .classify .sub-list .sub-item:hover
+.contri-condition .contri-sort .contri-sort-type li:hover
+.hash-popup .topic-container .item.is-selected
+.hash-popup .topic-container .item:hover
   background-color var(--c-hover) !important
 
 .van-popper .popper__arrow
