--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -64,6 +64,16 @@ button
 .pagination-container .pagination.active
 #nav_upload_btn
 .back-top-box .totop-container.utils-box
+.upload-v2-step1-container #homeDrop .upload-btn
+.video-editor-ol-wrp .video-editor-ol-btn
+.cc-btn
+.music-upload-wrapper .upload-music-bar-wrapper
+.create-compilations-btn
+.compila-condition .compila-right .compila-add
+.compila-not-find .compila-not-find-ime
+.contri-not-find .contri-not-find-ime
+.list-playbtn
+.send-button
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -154,6 +164,10 @@ button
 .submit-btn.disabled
 .pagination-container .pagination
 .source-rank-stretch-button
+.classify .classify-list .list-item .class-block
+.btn-group .ui-btn.white
+.publish-launcher .publish-btn.disabled
+.button-bar .bp-button
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
