--- a/bilibili-lite/src/message/base.styl
+++ b/bilibili-lite/src/message/base.styl
@@ -24,6 +24,7 @@
 	background-color var(--c-background) !important
 
 .side-bar .item:hover
+.list-item:hover
 	background-color var(--c-hover) !important
 
 .side-bar .list
