--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -8,6 +8,7 @@ button
 .backup
 .paging-box-big .current
 .pager .pages .page-item.active button
+.page-wrap .page-list-box .page-item.active
 .bui-button-blue
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-electric
 .default-btn
@@ -74,6 +75,9 @@ button
 .contri-not-find .contri-not-find-ime
 .list-playbtn
 .send-button
+.card .focus-btn .unfocus
+.card .focus-btn .focus
+.top-header .focus-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -119,6 +123,7 @@ button
 .paging-box-big .next
 .paging-box-big .prev
 .pager .pages .page-item button
+.page-wrap .page-list-box .page-item
 .following
 .bui-button.bui-button-gray2
 .danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .player-tooltips-trigger
