--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -1,6 +1,8 @@
 /* 评论 */
 .bb-comment .nameplate .nameplate-card .nameplate-arrow
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-arrow
+.bb-comment .nameplate
+.comment-bilibili-fold .nameplate
 	display none
 
 #comment
