--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -8,15 +8,26 @@
 .feed-tag .card
   background-color var(--c-background) !important
 
+.imagesbox .boost-control
+  background-color var(--c-hover) !important
+
 .video-container .text-area .title
 .feed-tag .separater-line
   color var(--c-title) !important
 
 .video-container .text-area .view-danmaku span
+.imagesbox .boost-control li i
   color var(--c-text) !important
+
+.card .focus-btn .unfocus .unfocus-text
+.card .focus-btn .focus .focus-text
+  color var(--c-white) !important
 
 .dynamic-link-hover-bg
 .shop-desc .desc-box .price-desc
+.userinfo-wrapper .info .user .vip
+.imagesbox .boost-control li:hover span
+.imagesbox .boost-control li:hover i
   color var(--c-accent) !important
 
 .article-container:hover .text-area
@@ -24,12 +35,14 @@
 
 .feed-card .card .main-content
 .feed-card .card .card-content
-  width auto
+.card .main-content
+  width auto !important
 
 .feed-card .content .bottom
   height auto !important
 
 .feed-card .card
+.feed .card
 .dynamic-link-hover-bg:hover
   border 0 !important
   background-color var(--c-background)
@@ -65,7 +78,17 @@
   border-color var(--c-border) !important
   background-color var(--c-background) !important
 
+.userinfo-wrapper
+.userinfo-content
+  border-color var(--c-border) !important
+  box-shadow none !important
+  background-color var(--c-background) !important
+
+.userinfo-wrapper .btn-box a
+  vertical-align top
+
 .blp-ui-button
+.photo-imager-container .control-buttons .close-button
   background-color transparent !important
   color var(--c-text) !important
 
