--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -4,6 +4,8 @@
 	display none !important
 
 .channel-menu-mini
+.international-header .mini-type
+.van-popover .mini-type
 	background-color var(--c-background)
 
 .channel-menu-mini .box a:hover
